--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
         <img class="home-img" src="./profile.png" alt="">
       </div>
       <div>
-        <p class="about-text">A dedicated and detail-oriented Full stack web developer and having 1200 hours of coding
-          experience from MASAI.
-          Excited to apply coding skills and knowledge to the
-          organization. Having a keen desire to work with the team
-          and learn new technology.
+        <p class="about-text" id="user-detail-intro">  I am a web developer proficient in NodeJS Backend Tech. and DSA, with
+          an ever-growing passion for implementing and launching new projects
+          that have tangible outcomes for others. Ability to work well in
+          team-oriented and collaborative projects. Looking forward to working
+          in a company to augment my skills and contribute significantly to the
+          organization.
         </p>
         <div id="yourSP">
           <div>
@@ -337,7 +338,7 @@
               class="project-github-link btn2">
               < CodeBase>
             </a>
-            <a target="_blank" href="https://dentcare247.netlify.app/" class="project-github-link btn2">Live</a>
+            <a target="_blank" href="https://dentcare247.netlify.app/" class="project-github-link project-deployed-link btn2">Live</a>
           </div>
         </div>
       </div>
@@ -424,7 +425,7 @@
               < CodeBase>
             </a>
             <a target="_blank" href="https://comforting-nougat-70fd30.netlify.app/"
-              class="project-github-link btn2">Live</a>
+              class="project-github-link btn2 project-deployed-link">Live</a>
 
           </div>
         </div>
@@ -512,7 +513,7 @@
               < CodeBase>
             </a>
             <a target="_blank" href="https://fanciful-entremet-410236.netlify.app/index.html"
-              class="project-github-link btn2">
+              class="project-github-link btn2 project-deployed-link">
               < Live>
             </a>
           </div>
@@ -599,7 +600,7 @@
           </div>
           <div class="project-btn-div">
             <a target="_blank" href="https://github.com/aniketbabariya24/troubled-scarecrow-2936"
-              class="project-github-link btn2">
+              class="project-github-link btn2 project-deployed-link">
               < CodeBase>
             </a>
             <a target="_blank" href="https://superlative-heliotrope-1dc14c.netlify.app/"
@@ -682,7 +683,7 @@
             <img src="Media/location.png" class="icon" alt="" />
             <p>Bhilwara, Raj (India)</p>
           </div>
-          <div class="information">
+          <div class="information" id="contact-email">
             <img src="Media/mail.png" class="icon" alt="" />
             <p>kishansharma6377@gmail.com</p>
           </div>
