--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header id="nav-menu">
     <a href="#" class="logo">&lt; <span>Kishan</span> &gt;</a>
 
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <div class="bx bx-menu" id="menu-icon">kkk</div>
 
     <ul class="navbar">
       <li><a href="#home" class="nav-link home">Home</a></li>
