--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               class="project-github-link btn2">
               < CodeBase>
             </a>
-            <a target="_blank" href="https://dentcare247.netlify.app/" class="project-github-link project-deployed-link btn2">Live</a>
+            <a target="_blank" href="https://qr-insight-craft.netlify.app/" class="project-github-link project-deployed-link btn2">Live</a>
           </div>
         </div>
       </div>
@@ -424,7 +424,7 @@
               class="project-github-link btn2">
               < CodeBase>
             </a>
-            <a target="_blank" href="https://comforting-nougat-70fd30.netlify.app/"
+            <a target="_blank" href="https://qr-insight-craft.netlify.app/"
               class="project-github-link btn2 project-deployed-link">Live</a>
 
           </div>
@@ -512,7 +512,7 @@
               class="project-github-link btn2">
               < CodeBase>
             </a>
-            <a target="_blank" href="https://fanciful-entremet-410236.netlify.app/index.html"
+            <a target="_blank" href="https://qr-insight-craft.netlify.app/"
               class="project-github-link btn2 project-deployed-link">
               < Live>
             </a>
@@ -603,7 +603,7 @@
               class="project-github-link btn2 project-deployed-link">
               < CodeBase>
             </a>
-            <a target="_blank" href="https://superlative-heliotrope-1dc14c.netlify.app/"
+            <a target="_blank" href="https://qr-insight-craft.netlify.app/"
               class="project-github-link btn2">Live</a>
           </div>
         </div>
