--- a/index.html
+++ b/index.html
@@ -48,12 +48,31 @@
       <li><a href="#skills" class="nav-link skills">Skills</a></li>
       <li><a href="#projects" class="nav-link projects">Projects</a></li>
       <li><a href="#contact" class="nav-link contact">Contact</a></li>
-      <li><a href="./Media/Kishan-Sharma-Resume.pdf" download="Kishan-Sharma-Resume" class="nav-link resume"
-          id="resume-button-1"> Resume &nbsp; <i class="fa-solid fa-cloud-arrow-down"></i> </a> </li>
+
+      <li id="resume-button-1">
+        <a href="./Media/Kishan-Sharma-Resume.pdf" target="_blank" download="Kishan-Sharma-Resume" class="nav-link resume"
+          id="resume-link-1"> 
+            Resume 
+            &nbsp; 
+            <i class="fa-solid fa-cloud-arrow-down"></i> 
+        </a>
+      </li>
+
+      <!-- <li id="resume-button-1" class="nav-link resume">
+        <a href="./Media/Kishan-Sharma-Resume.pdf" target="_blank" id="resume-link-1"
+          download="Kishan-Sharma-Resume">Resume
+          <i class='bx bxs-download'></i></a>
+      </li> -->
+
       <div class="bx bx-sun" id="darkmode"></div>
     </ul>
   </header>
   <!-- Navbar Section End -->
+
+
+
+
+
 
 
 
@@ -112,8 +131,22 @@
           </div>
         </div>
 
-        <li><a href="./Media/Kishan-Sharma-Resume.pdf" download="Kishan-Sharma-Resume" class="nav-link resume btn"
-            id="resume-button-2">Resume&nbsp;<i class="fa-solid fa-cloud-arrow-down"></i></a></li>
+        <li id="resume-button-2">
+          <a href="./Media/Kishan-Sharma-Resume.pdf" target="_blank" download="Kishan-Sharma-Resume" class="nav-link resume btn"
+            id="resume-link-2">
+              Resume&nbsp;
+              <i class="fa-solid fa-cloud-arrow-down"></i>
+          </a>
+        </li>
+
+
+        
+        <!-- <li id="resume-button-2">
+          <a href="./Media/Kishan-Sharma-Resume.pdf" target="_blank" id="resume-link-2" class="button"
+            download="Kishan-Sharma-Resume">Resume <i class='bx bxs-download'></i></a>
+        </li> -->
+
+
       </div>
 
 
