--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
   <link rel="stylesheet" href="./Styles/contact.css">
   <link rel="stylesheet" href="./Styles/github.css">
@@ -83,7 +84,7 @@
     <div class="home-text">
       <span>Hello, I'm</span>
       <h1 id="user-detail-name">Kishan Sharma</h1>
-      <h2>Node Backend Developer</h2>
+      <h2 class="typing1" style="height: 30px;"></h2>
       <a href="#contact" class="btn ccme">Contact Me</a>
     </div>
     <div class="about-img">
