--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
     <div class="home-text">
       <span>Hello, I'm</span>
       <h1 id="user-detail-name">Kishan Sharma</h1>
-      <h2 class="typing1" style="height: 30px;"></h2>
+
+      <h2 style="font-size: 24px;  letter-spacing: 1px;">
+        And I'm
+        <span class="typing1" style="font-size: 24px; letter-spacing: 1px;">
+        </span>
+      </h2>
+
       <a href="#contact" class="btn ccme">Contact Me</a>
     </div>
     <div class="about-img">
@@ -224,15 +230,15 @@
       <div class="skills-card">
         <div>
           <!-- <img class="skills-card-img" src="https://socket.io/images/logo-dark.svg" alt=""> -->
-          <img class="skills-card-img" src="https://www.vectorlogo.zone/logos/socketio/socketio-icon.svg" alt="">
+          <img class="skills-card-img" src="https://static-00.iconduck.com/assets.00/socket-io-icon-2048x2046-tx88w4en.png" alt="">
         </div>
         <p class="skills-card-name green">Socket.io</p>
       </div>
       <div class="skills-card">
         <div>
-          <img class="skills-card-img" src="https://cdn-icons-png.flaticon.com/512/4380/4380600.png" alt="">
+          <img class="skills-card-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/2048px-Typescript_logo_2020.svg.png" alt="">
         </div>
-        <p class="skills-card-name green">System Design</p>
+        <p class="skills-card-name green">TypeScript</p>
       </div>
 
 
