--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
           </div>
           <div>
-            <h2 class="white">Teck Stacks :</h2>
+            <h2 class="white">Tech Stacks :</h2>
             <div class="project-tech-stack">
               <div>
                 <!-- HTML  -->
@@ -583,7 +583,7 @@
 
           </div>
           <div>
-            <h2 class="white">Teck Stacks :</h2>
+            <h2 class="white">Tech Stacks :</h2>
             <div class="project-tech-stack">
               <div>
                 <!-- HTML  -->
@@ -671,7 +671,7 @@
             </p>
           </div>
           <div>
-            <h2 class="white">Teck Stacks :</h2>
+            <h2 class="white">Tech Stacks :</h2>
             <div class="project-tech-stack">
               <div>
                 <!-- HTML  -->
@@ -760,7 +760,7 @@
             </p>
           </div>
           <div>
-            <h2 class="white">Teck Stacks :</h2>
+            <h2 class="white">Tech Stacks :</h2>
             <div class="project-tech-stack">
               <div>
                 <!-- HTML  -->
