--- a/index.html
+++ b/index.html
@@ -989,16 +989,17 @@
         <!-- <img id="github-top-langs"
           src="https://github-readme-stats.vercel.app/api/top-langs/?username=Mrkishansharma&lans-count=4" alt=""> -->
         <img id="github-stats-card"
-          src="https://github-readme-stats.vercel.app/api?username=Mrkishansharma&show_icons=true&locale=en" alt="">
+          src="https://github-readme-stats.vercel.app/api?username=Mrkishansharma&show_icons=true&locale=en" alt="Github">
 
       </div>
 
       <div id="statsimg">
         <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Mrkishansharma&"
-          alt="">
+          alt="Github">
       </div>
-
+      
     </div>
+    
   </section>
 
   <section id="calendar">
@@ -1016,7 +1017,6 @@
   <!-- ======================Contact ======================= -->
   <section id="contact">
 
-    <!-- <img src="img/shape.png" class="square" alt="" /> -->
     <div class="form">
       <div class="contact-info">
         <h3 class="title">Let's get in touch</h3>
